Fix Bugs - Royal Overlap Placement & Damage Calc

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+body {
+    overflow: hidden; /* Hide scrollbars */
+  }
 .card-slot-numbered , .card-slot-royal, .deck-slot{
     padding-top: 100%;
 	width: 100%;
@@ -70,6 +72,10 @@
 
 .hide-element{
     opacity: 0;
+}
+
+.deactivate{
+    opacity: 0.2;
 }
 
 .drop-active {
